Add Gutenberg Blocks

--- a/assets/src/sass/6-editor/_editor.scss
+++ b/assets/src/sass/6-editor/_editor.scss
@@ -4,3 +4,10 @@
 @import "../2-generic/elements";
 @import "../2-generic/buttons";
 @import "../2-generic/editor-color-classes";
+
+//Page Setting
+@import "page-settings";
+
+
+
+
