--- a/assets/src/sass/blocks.scss
+++ b/assets/src/sass/blocks.scss
@@ -1,13 +1,9 @@
 @import "0-settings/colors";
 // Blocks.
-@import "7-blocks/heading-with-icon";
-@import "7-blocks/dos-and-donts";
 @import "7-blocks/quote";
 @import "7-blocks/button";
 
 
-.ciao{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-}
+@import '7-blocks/sizes-control';
+
+
