Add image Block

--- a/assets/src/sass/blocks.scss
+++ b/assets/src/sass/blocks.scss
@@ -3,7 +3,11 @@
 @import "7-blocks/quote";
 @import "7-blocks/button";
 
+@import "7-blocks/layout";
+
 
 @import '7-blocks/sizes-control';
+@import '7-blocks/parallax-background';
+@import '7-blocks/image';
 
 
