--- a/assets/src/sass/6-editor/_page-settings.scss
+++ b/assets/src/sass/6-editor/_page-settings.scss
@@ -9,3 +9,18 @@
     margin-top: 0px !important;
     margin-bottom: 0px !important;
 }
+
+
+/* Margin comun fix */
+@media (min-width: 782px){
+    .editor-styles-wrapper .block-editor-block-list__block.wp-block-column:not(:first-child) {
+        margin-left: 32px;
+    }
+}
+
+
+@media (min-width: 600px){
+    .editor-styles-wrapper .block-editor-block-list__block.wp-block-column:nth-child(2n) {
+        margin-left: 32px;
+    }
+}
