--- a/assets/src/sass/6-editor/_editor.scss
+++ b/assets/src/sass/6-editor/_editor.scss
@@ -6,7 +6,7 @@
 @import "../2-generic/editor-color-classes"; */
 
 //Page Setting
-@import "page-settings";
+@import "core-editor-blocks-fixes";
 
 
 
