--- a/assets/src/sass/0-settings/_typography.scss
+++ b/assets/src/sass/0-settings/_typography.scss
@@ -1,19 +1,24 @@
+@import "../fonts/arianLT/arianLT.css";
 
 /*----------------
 		Font
 ------------------*/
 
-// Global theme font.
-$font__main: "ArianLT", sans-serif;
-
-// Global code font
-$font__code: "ArianLT", sans-serif, monospace;
-
 // Fallback font when font is not loaded via WebFonts JS.
 $font__fallback: sans-serif;
 
+// Global theme font.
+$font__main: "ArianLT", $font__fallback;
+
 // Base line height.
 $font__base-line-height: 30px;
+
+/*------------------------
+		Font Weights
+--------------------------*/
+
+
+
 
 /*---------------------------------
 		Body Text Font Sizes
@@ -21,68 +26,68 @@ $font__base-line-height: 30px;
 
 $body-text: (
 	"h1": (
-		"small": (
+		"sm": (
 			font-size: 31.5px,
 			line-height: 1.27,
 		),
 	),
 	"h2": (
-		"small": (
+		"sm": (
 			font-size: 31.5px,
 			line-height: 1.27,
 		),
 	),
 	"h3": (
-		"small": (
+		"sm": (
 			font-size: 24.5px,
 			line-height: 1.64,
 		),
 	),
 	"h4": (
-		"small": (
+		"sm": (
 			font-size: 17.5px,
 			line-height: 1.142,
 		),
 	),
 	"h5": (
-		"small": (
+		"sm": (
 			font-size: 14px,
 			line-height: 1.43,
 		),
 	),
 	"h6": (
-		"small": (
+		"sm": (
 			font-size: 11.9px,
 			line-height: 1.681,
 		),
 	),
 	"body": (
-		"small": (
+		"sm": (
 			font-size: 16px,
 			line-height: 1.43,
 		),
-		"large": (
+		"lg": (
 			font-size: 18px,
 			line-height: 1.43,
 		),
 	),
 	"l": (
-		"small": (
+		"sm": (
 			font-size: 18px,
 		),
 	),
 	"m": (
-		"small": (
+		"sm": (
 			font-size: 16px,
 		),
 	),
 	"s": (
-		"small": (
+		"sm": (
 			font-size: 12px,
 		),
 	),
 	"xs": (
-		"small": (
+		"sm": (
 			font-size: 11px,
 		),
 	),
