--- a/assets/src/sass/1-tools/_fonts.scss
+++ b/assets/src/sass/1-tools/_fonts.scss
@@ -1,4 +1,6 @@
-
+/*---------------------------
+		Others
+---------------------------*/
 @mixin font-family( $font: $font__main ) {
 	font-family: $font__main;
 }
