--- a/assets/src/sass/7-blocks/_layout.scss
+++ b/assets/src/sass/7-blocks/_layout.scss
@@ -11,3 +11,6 @@
     &.are-vertically-aligned-center{ align-items: center;}
 }
 
+.alignfull{ @include container-size('full') }
+.alignwide{ @include container-size('wide') }
+
