--- a/assets/src/sass/blocks.scss
+++ b/assets/src/sass/blocks.scss
@@ -1,7 +1,15 @@
-@import "0-settings/colors";
+@import "0-settings/settings";
 // Blocks.
 
 //@import "7-blocks/button";
+
+@import "essentials";
+@import "1-tools/tools";
+
+@import "2-generic/elements";
+@import "2-generic/common-classes";
+
+@import "4-layouts/page-element";
 
 @import "7-blocks/layout";
 
