--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -3,6 +3,9 @@
 @import "1-tools/tools";
 
 @import "2-generic/elements";
+@import "2-generic/common-classes";
+
+@import "4-layouts/page-element";
 
 // Generic
 /* @import "2-generic/generic";
