--- a/assets/src/fonts/arianLT/arianLT.css
+++ b/assets/src/fonts/arianLT/arianLT.css
@@ -19,7 +19,7 @@
         url('ArianLT-Light.woff') format('woff'),
         url('ArianLT-Light.ttf') format('truetype'),
         url('ArianLT-Light.svg#ArianLT-Light') format('svg');
-    font-weight: 300;
+    font-weight: 100;
     font-style: normal;
     font-display: swap;
 }
@@ -32,20 +32,20 @@
         url('ArianLT-Bold.woff') format('woff'),
         url('ArianLT-Bold.ttf') format('truetype'),
         url('ArianLT-Bold.svg#ArianLT-Bold') format('svg');
-    font-weight: bold;
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'ArianLT-Demi';
+    font-family: 'ArianLT';
     src: url('ArianLT-Demi.eot');
     src: url('ArianLT-Demi.eot?#iefix') format('embedded-opentype'),
         url('ArianLT-Demi.woff2') format('woff2'),
         url('ArianLT-Demi.woff') format('woff'),
         url('ArianLT-Demi.ttf') format('truetype'),
         url('ArianLT-Demi.svg#ArianLT-Demi') format('svg');
-    font-weight: normal;
+    font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
