--- a/assets/src/sass/0-settings/_layouts.scss
+++ b/assets/src/sass/0-settings/_layouts.scss
@@ -7,13 +7,12 @@ $mq-breakpoints: (
     xxl: 1320px
 ) !default;
 
-$container: 1266px;
+$container-max-width: 1300px;
 $container-fluid: 100%;
 
+$container-padding-left: 30px;
+$container-padding-right: 30px;
 
-// Center block
-@mixin center-block {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
+
+$margin-range: 5;
+$padding-range: 5;
