--- a/assets/src/sass/editor.scss
+++ b/assets/src/sass/editor.scss
@@ -1,1 +1,10 @@
+// Essentials.
+@import "essentials";
+@import "1-tools/tools";
+
+@import "2-generic/elements";
+@import "2-generic/common-classes";
+
+@import "4-layouts/page-element";
+
 @import '6-editor/editor';
