--- a/assets/src/sass/0-settings/_typography.scss
+++ b/assets/src/sass/0-settings/_typography.scss
@@ -89,7 +89,12 @@ $body-text: (
 			font-size: 10px,
 			line-height: 1.5
 		),
-
+	),
+	"body":(
+		"sm":(
+			font-size: 2.1rem,
+			line-height: 1
+		)
 	),
 	"l": (
 		"sm": (
