--- a/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
+++ b/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
@@ -1,10 +1,8 @@
 /* Page Width */
-.wp-block[data-align="full"]{
+.wp-block{
     max-width: $container-fluid;
 }
-.wp-block[data-align="wide"]{
-    max-width: $container-max-width;
-}
+
 
 
 /* no margin on top and bottom of text */
