--- a/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
+++ b/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
@@ -28,3 +28,11 @@
     }
 }
 
+/*--------------
+    Smaw Column
+----------------*/
+div[data-title="Smaw Column"]{
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
