Find another way for extending blocks

--- a/assets/src/sass/0-settings/_typography.scss
+++ b/assets/src/sass/0-settings/_typography.scss
@@ -18,7 +18,7 @@ $font__main: "ArianLT", $font__fallback;
 $font__thin: 100;
 $font__semibold: 300;
 $font__bold: 600;
-$font_heavy: 900;
+$font__heavy: 900;
 
 
 /*---------------------------------
