--- a/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
+++ b/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
@@ -30,9 +30,9 @@
 
 /*--------------
     Smaw Column
-----------------*/
+/* ----------------*/
 div[data-title="Smaw Column"]{
     flex-grow: 1;
-    flex-basis: 0;
 }
 
+ 
