--- a/assets/src/sass/blocks.scss
+++ b/assets/src/sass/blocks.scss
@@ -17,5 +17,6 @@
 @import '7-blocks/sizes-control';
 @import '7-blocks/parallax-background';
 @import '7-blocks/image';
+@import '7-blocks/button';
 
 
