--- a/assets/src/sass/0-settings/_typography.scss
+++ b/assets/src/sass/0-settings/_typography.scss
@@ -28,44 +28,60 @@ $font__heavy: 900;
 $body-text: (
 	"h1": (
 		"sm": (
-			font-size: 4rem,
+			font-size: 6rem,
+			line-height: 1.27,
+		),
+		"md": (
+			font-size: 7rem,
+			line-height: 1.27,
+		),
+		"lg": (
+			font-size: 8rem,
 			line-height: 1.27,
 		)
 	),
 	"h2": (
 		"sm": (
-			font-size: 3.5rem,
+			font-size: 7rem,
 			line-height: 1.27
 		)
 	),
 	"h3": (
 		"sm": (
-			font-size: 3.1rem,
+			font-size: 6rem,
 			line-height: 1.64
 		),
 	),
 	"h4": (
 		"sm": (
-			font-size: 2.8rem,
+			font-size: 5rem,
 			line-height: 1.142
 		),
 	),
 	"h5": (
 		"sm": (
-			font-size: 2.4rem,
+			font-size: 2.8rem,
+			line-height: 1.43
+		),
+		"md": (
+			font-size: 3.2rem,
+			line-height: 1.43
+		),
+		"lg": (
+			font-size: 4rem,
 			line-height: 1.43
 		),
 	),
 	"h6": (
 		"sm": (
-			font-size: 2.2rem,
+			font-size: 3rem,
 			line-height: 1.4
 		),
 	),
 	"p": (
 		"sm": (
 			font-size: 2.1rem,
-			line-height: 1.4
+			line-height: 1.8
 		),
 	),
 	"html": (
