--- a/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
+++ b/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
@@ -12,7 +12,7 @@
 }
 
 
-/* Margin comun fix */
+/* Margin column fix */
 
 .block-editor-block-list__block.wp-block-column:not(:first-child) {
     @media (min-width: 782px){
@@ -35,4 +35,17 @@ div[data-title="Smaw Column"]{
     flex-grow: 1;
 }
 
+
+
+/*--------------
+    line-height
+----------------*/
  
+.editor-styles-wrapper h1, 
+.editor-styles-wrapper h2, 
+.editor-styles-wrapper h3 ,
+.editor-styles-wrapper h4, 
+.editor-styles-wrapper h5, 
+.editor-styles-wrapper h6{
+    line-height: inherit;
+}
