--- a/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
+++ b/assets/src/sass/6-editor/_core-editor-blocks-fixes.scss
@@ -49,3 +49,9 @@ div[data-title="Smaw Column"]{
 .editor-styles-wrapper h6{
     line-height: inherit;
 }
+
+
+
+.components-panel p{
+    font-size: 1.2rem;
+}
