--- a/assets/src/sass/7-blocks/_image.scss
+++ b/assets/src/sass/7-blocks/_image.scss
@@ -6,10 +6,12 @@
     position: relative;
 
     img{
-        margin-left: 50%;
-        transform: translateX(-50%);
-        position: absolute;
+        display: block;
         opacity: 0;
+        width:100%;
+        height: auto;
+
+        @include overflow-image($mq-breakpoints, '&');
 
         &.foreground{
             opacity: 1;
@@ -18,7 +20,7 @@
     }
 }
 
-figure.wp-block-image { 
+/* figure.wp-block-image { 
     width: 100%; 
 
     img {
@@ -27,3 +29,5 @@ figure.wp-block-image {
     }
 
 }
+
+ */
