--- a/assets/src/sass/4-layouts/_page-element.scss
+++ b/assets/src/sass/4-layouts/_page-element.scss
@@ -1,2 +1,12 @@
 @import "header";
 @import "footer";
+
+.page-separator{
+    hr{
+        border-color: $charleston-green;
+        width: 15%;
+        margin-right: auto;
+        margin-left: 0;
+    }
+
+}
