--- a/assets/src/sass/0-settings/_colors.scss
+++ b/assets/src/sass/0-settings/_colors.scss
@@ -10,7 +10,7 @@ $white: #ffffff;
 
 $charleston-green: #2a2b26;
 $timberwolf: #f2f2f2;
-
+$light-gray: #b8b7b7;
 
 
 /*---------------------------------
