--- a/assets/src/sass/blocks.scss
+++ b/assets/src/sass/blocks.scss
@@ -1,4 +1,4 @@
-@import "0-settings/settings";
+/* @import "0-settings/settings";
 // Blocks.
 
 //@import "7-blocks/button";
@@ -20,3 +20,4 @@
 @import '7-blocks/button';
 
 
+ */
